delete some files

--- a/source/小说还是得看.md
+++ b/source/小说还是得看.md
@@ -16,11 +16,11 @@ date: 2018-07-07
 - 平凡的世界
 
 <table>
-<th><img src="https://github.com/ourfor/diary/blob/master/Picture/photo/I01052398.jpg" align=left width=100% height=40%></th>
-<th><img src="https://github.com/ourfor/diary/blob/master/Picture/photo/I01052399.jpg" align=center width=100% height=40%></th>
+<th><img src="//github.com/ourfor/diary/blob/master/Picture/photo/I01052398.jpg" align=left width=100% height=40%></th>
+<th><img src="//github.com/ourfor/diary/blob/master/Picture/photo/I01052399.jpg" align=center width=100% height=40%></th>
 </table>
 
 在手机上面看小说还是得追求 **排版** ，多看阅读就不错，里面搜索` 多看文库 `,里面的书籍📚都是官方精心排版的。
 
-- 推荐一个小说[下载的网站](https://mebook.cc)
+- 推荐一个小说[下载的网站](//mebook.cc)
 
