--- a/source/暑假规划.md
+++ b/source/暑假规划.md
@@ -21,7 +21,7 @@ date: 2018-07-13
 ### 真的猛士敢于直面惨淡的人生，敢于正视淋漓的鲜血，这是怎样的哀痛者和幸福者，然而造化又常常为佣人设计，以时间的流逝来洗涤旧迹，仅使留下淡红的血色和微末的悲哀。
 
 
-<table>
+<table class="table">
 <tr>
   <th>H/周</th>
   <th>周日</th>
